# telegram_wish_mini_app

./: README.md  api.yaml  docker-compose.yaml
ENV/: .env
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/api/: main.py
backend/app/api/routers/: auth.py  user.py
backend/app/core/: config.py  db.py  dependencies.py  security.py
backend/app/models/: user.py  wish.py
backend/app/repositories/: user_repositories.py
backend/app/schemas/: user.py
backend/app/service/: user_service.py
backend/app/services/: __init__.py
frontend/: inde.html  package-lock.json  package.json
frontend/src/lib/components/screens/: MainScreen.svelte
frontend/src/lib/components/ui/: Avatar.svelte  Button.svelte
frontend/src/lib/stores/: data.js
nginx/: nginx.conf
